DesignProject/tests/error/test14.src
// type mismatch in arithmetic operation
func testArithMismatch() -> integer {
    local x : integer;
    local y : integer;
    x := 5;
    y := x + "hello";  // error: cannot add integer and string
    return(y);
}

